[gd_scene load_steps=5 format=3 uid="uid://547srwe3w806"]

[ext_resource type="Script" path="res://scenes/ui/scene_manager.gd" id="1_3tqbs"]
[ext_resource type="PackedScene" uid="uid://w0ioml81t38b" path="res://scenes/test/logo_scene.tscn" id="2_4dbem"]
[ext_resource type="PackedScene" uid="uid://wm7vwqrlsq56" path="res://scenes/test/main_menu.tscn" id="3_vys8o"]
[ext_resource type="PackedScene" uid="uid://cinideb2xyoyu" path="res://scenes/test/level_scene_tile_map.tscn" id="4_v4qxv"]

[node name="SceneManager" type="Node2D"]
script = ExtResource("1_3tqbs")

[node name="LogoScene" parent="." instance=ExtResource("2_4dbem")]

[node name="MainMenu" parent="." instance=ExtResource("3_vys8o")]
visible = false

[node name="LevelSceneTileMap" parent="." instance=ExtResource("4_v4qxv")]
visible = false

[node name="Mask" type="ColorRect" parent="."]
offset_right = 864.0
offset_bottom = 486.0
color = Color(0, 0, 0, 1)

[node name="Timer" type="Timer" parent="."]

[connection signal="levels_completed" from="LevelSceneTileMap" to="." method="_on_level_scene_tile_map_levels_completed"]
